--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
